--- a/proposal/ll.tex
+++ b/proposal/ll.tex
@@ -3,3 +3,4 @@
 \newcommand{\var}[1]{{\bf #1}}
 \newcommand{\frule}[2]{#1 \Leftarrow #2}
 \newcommand{\brule}[2]{#1 \leftarrow #2}
+\newcommand{\query}[1]{?#1}
