--- a/proposal/background.tex
+++ b/proposal/background.tex
@@ -270,16 +270,78 @@ In this way, circumscription forms the basis for the form of negation present in
 % Binary analysis
 \section{Binary Analysis}
 % * Spiel about how binary analysis is different
+While at its core binary analysis is fundamentally similar to program analysis, there are a number of challenges preventing the direct application of techniques from the program analysis world.
 %   * Abstractions stripped out
+Most of these challenges fall into the category of absent abstraction.
+Function locations, variable locations and bounds, variable types, and control flow graphs are all generally taken for granted even in the analysis of ``low level'' languages such as C.
+
 %   * CFG unknown
+While all of these can cause difficulties, the inability to recover a complete control flow graph can be one of teh most difficult to deal with.
+Nearly every algorithm for recovering any of the other missing abstractions depends strongly on having a pre-existing control flow graph.\todo{citations}
+However, without the abstractions present in the source language, determining the potential targets of an indirect (computed) jump becomes somewhere between difficult and impossible.
+Being unsound here can result in unsoundness in every analysis down the road, but frequently ``good enough'' approximations are used due to the difficulty of this problem.
+
 %   * Extraordinarily stateful, with large state
+One of the features of functional code that makes it easier to analyze is its thorough reduction of state.
+Traditional procedural/imperative langauges make this slightly more difficult through the use of variables in many places, expanding the set of implicit inputs to each step greatly.
+Binary code however, takes this to a whole new level of complexity.
+With no bounds on variables, arrays, or inputs, it becomes quickly difficult to determine what parts of memory and registers are really the relevant state executing forwards from a particular point.
+Due to the lack of scope or lifetime abstractions, once a new piece of state enters an execution, it is rare for it to leave at a later point --- much of the program image in memory is potential state.
+There are things that can be done to alleviate this, some approximations, some sound.
+However, the bottom line remains: the state space is so large that a number of traditional exploration techniques break down.\todo{cite examples}
+
 % * Static
 \subsection{Static Analyses}
 %   * What is static?
+Static analyses are those which focus on deriving information from the structure of the complete program.
+While not always true, these are usually properties that talk about many or all paths.
+
 %   * Control flow recovery
+Control flow recovery is usually thought of as a static analysis.
+The goal is to generate a complete graph of possible program counter transitions in the program while containing as few spurious edges as possible.
+While information from a concrete execution can be useful to the final product (as it contains a series of jumps which the output graph must contain to be correct) it does not allow for the declaration of any control flow graph as complete.
+The simple form of control flow recovery involves performing recursive descent disassembly from a given entry point, watching for a transition to a distinguished exit node (usually via a function return).
+However, indirect jumps due to function pointers, C++ method calls, and even creative compilation of case statements can wreak havoc on this method, since the value being jumped to is not known ahead of time.
+
 %   * Value analysis (Abstract Interpretation)
+It follows then, that recovering upper bounds on the range of various pieces of state in a program would be useful.
+One common way to do this is to perform abstract interpretation of the program over a domain which is expected to model the range of values well.\cite{vsa}\todo{cite wrapped intervals}
+
+Unfortunately, this abstract interpretation assumes that the control flow graph has already been determined in order to sequence its transformations.
+Additionally, it can be tripped up by loops which do not converge nicely in its particular domain.
+The state of the art approach to this is to combine value analysis with control flow recovery, allowing new paths to be informed by new values, which in turn re-inform the value analysis\cite{jakstab}.
+
 %   * Type recovery
+Another important fundamentally static analysis is type recovery.
+While there is no rule that says there must be types as we usually think of them in a binary program, they are usually present due to a source language or programmer volition.
+Even assembly programmers and dynamic language users\todo{cite javascript speedup through type inference} usually use consistent types to some extent.
+
+Since the annotations have all been compiled away, there are two primary sources for type information: propagation from code boundaries and program action.
+Propagation\cite{howard} from code boundaries entails knowing a priori that a particular library or service in use by the program matches some signature, then following definitions of its arguments and uses of its results to annotate the program with this information.
+This helps some, but largely fails on any kind of internal data structure.
+Usage based analysis\cite{tie,bitr} tends to do better at this, and works by examining how the code defines and uses state and generating constraints for types based on that.
+
 % * Dynamic
 \subsection{Dynamic Analyses}
+Dynamic analyses are those which focus on properties of individual executions, or statements of the form ``there exists a trace with the property\ldots''.
+These analyses are frequently good at narrowing down/pinpointing problems, or increasing the accuracy of approximations.
+However, they tend to do a poor job at making definitive statements about whole-program properties.
+
 %   * Fuzzing
+\subsubsection{Fuzzing}
+One common modern way to find issues in code, especially non-introspectable code like binaries, is to simply perform a very large number of executions with varied inputs.
+This technique is known as ``fuzzing'', and is widely used in the search for security flaws.
+There are a number of axes along which this technique can differ, but the primary two are blackbox\todo{cite peach} vs whitebox\todo{cite grammar based whitebox fuzzing (pldi) and concolic testing} and generational\todo{cite peach} vs mutational\todo{cite zzuf}.
+
 %   * Symbolic Execution + SMT
+\subsubsection{Symbolic Execution}
+A slightly more sophisticated (though more expensive) approach is to attempt to keep as many inputs as possible ``symbolic'' while executing.
+Essentially, if an exact value is not needed in order to take a step, expressions based on inputs are used in place of concrete values as long as possible.
+When a conditional branch is taken, the condition is added to a path constraint, restricting the range of inputs for which this execution is considered feasible.
+When a potentially dangerous operation is about to be performed (such as jumping to or dereferencing a symbolic value), a check for the plausibility of the ``bad'' scenario can be fed to an SMT solver\footnote{\
+SMT stands for Satisfiability Modulo Theory, and can be thought of as a SAT solver whose variables have a extra domains and additional operations. In this work, we primarily consider the theory of bitvectors.       
+}.
+The formula is created by taking the conjunction of the path constraint with whatever condition suffices to cause the badly behaved event.
+If the SMT solver returns a solution, a bad input has been found\todo{cite mayhem+co}.
+If instead of simply sufficing, the condition passed is complete (e.g.\ the operation is \emph{only} dangerous if the check passes), the SMT solver returning UNSAT gives safety, but for \emph{this path only}.
+Since loops create an infinite number of paths, it is difficult to demonstrate any region safe this way, but it can rule out certain kinds of exploration.
