Suppress todonotes marginpar warnings

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -1,4 +1,6 @@
 \documentclass[12pt]{cmuthesis}
+\usepackage{silence}
+\WarningFilter*{latex}{Marginpar on page \thepage\space moved}
 \usepackage{fullpage}
 \usepackage{todonotes}
 \usepackage{syntax}
